--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -160,5 +160,5 @@
 {% endif %}{% endif %}{% endif %}{% endif %}
 {% if order.status > 1 %}
 	<a href="{% url tab_orders %}" class="back">Retour aux commandes</a>
-{% endif %}{% endif %}
+{% endif %}
 </div>
