--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -29,16 +29,17 @@
 			</thead>
 		{% else %}
 			<tr class="{% cycle 'odd' 'even' %}">
-				<td>
-					{% if line.0 == True %}
-					<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" checked="checked" />
-					{% else %}
-					<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" enabled="disabled" />
-					{% endif %}
-				</td>
 				{% for item in line %}
-					{% if forloop.counter > 1 %}
-					<td class="{% if line.0 == False %}disabled{% endif %}">{{ item }}</td>
+					{% if forloop.counter == 1 %}
+						<td>
+							{% if item == True %}
+							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" checked="checked" />
+							{% else %}
+							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" enabled="disabled" />
+							{% endif %}
+						</td>
+					{% else %}
+						<td class="{% if line.0 == False %}disabled{% endif %}">{{ item }}</td>
 					{% endif %}
 				{% endfor %}
 			</tr>
