fixing import xls

--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -35,7 +35,7 @@
 							{% if item == 'true' %}
 							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" checked="checked" />
 							{% else %}
-							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" enable="false" />
+							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" disabled="true" />
 							{% endif %}
 						</td>
 					{% else %}
