fixing import xls

--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -37,7 +37,7 @@
 							{% else %}
 							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" disabled="true" />
 							{% endif %}
-							- {{ forloop.counter }}
+							- {{ forloop.parentloop.counter }}
 						</td>
 					{% else %}
 						<td class="{% if line.0 == False %}disabled{% endif %}">{{ item }}</td>
