fixed service bug

--- a/templates/tab_services.html
+++ b/templates/tab_services.html
@@ -14,7 +14,7 @@
       {% endfor %}
     </fieldset>
     
-    <button type="submit" class="check">Commander</button>
+    <button type="submit" class="check">Ajouter au panier</button>
   </form>
 </div>
 {% endblock %}
