--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -33,9 +33,9 @@
 					{% if forloop.counter == 1 %}
 						<td>
 							{% if item == 'true' %}
-							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" checked="checked" />
+							<input type="checkbox" class="imported_item" value="{{forloop.parentloop.counter0}}" checked="checked" />
 							{% else %}
-							<input type="checkbox" class="imported_item" value="{{forloop.counter0}}" disabled="true" />
+							<input type="checkbox" class="imported_item" value="{{forloop.parentloop.counter0}}" disabled="true" />
 							{% endif %}
 							- {{ forloop.parentloop.counter0 }}
 						</td>
