--- a/templates/provider/delete.html
+++ b/templates/provider/delete.html
@@ -1,11 +1,12 @@
-{% extends "main_custom.html" %}
+{% extends "base_provider.html" %}
+{% block provider_list %}active{% endblock %}
 
-{% block header %}Suppression d'un fournisseur{% endblock %}
+{% block header %}
+<h1>Gestion des fournisseurs</h1>
+<h2>Suppression du fournisseur {{ provider.name }}</h2>
+{% endblock %}
 
 {% block content %}
-<div id="content" style="min-height:0">
-  <div id="content_header"><h2>Suppression du fournisseur {{ provider.name }}</h2></div>
-
 <p>
   La suppression d'un fournisseur est définitive et l'ensemble
   des produits et commandes lui étant rattachées seront 
@@ -14,9 +15,8 @@
 
 <p>Êtes-vous sûr de vouloir supprimer ce fournisseur ?</p>
 
-<form action="{% url provider_item provider.id %}" method="post">{% csrf_token %}
-  <input type="hidden" name="method" value="DELETE" />
-  <button type="submit" class="trash button">Supprimer {{ provider.name }}</button>
-  <a href="{% url provider_index %}" class="cross button">Abandonner la suppression</a>
+<form action="{% url provider_delete provider.id %}" method="post">{% csrf_token %}
+  <button type="submit" class="trash">Supprimer {{ provider.name }}</button>
+  <a href="{% url provider_index %}" class="back">Retour</a>
 </form>
 {% endblock %}
