--- a/templates/provider/item.html
+++ b/templates/provider/item.html
@@ -1,6 +1,4 @@
 {% extends "base_provider.html" %}
-{% load paginator filters %}
-
 {% block provider_list %}active{% endblock %}
 
 {% block header %}
@@ -10,13 +8,11 @@
 
 {% block content %}
 <form action="{% url provider_item provider.id %}" method="POST">{% csrf_token %}
-    <input type="hidden" name="method" value="PUT" />
-    <p class="instructions">
-      <em>Les champs marqués d'une étoile sont obligatoires</em>
-    </p>
-    {% for field in form %}
-        {% include "form_snippet.html"%}
-    {% endfor %}
-    <button type="submit" class="check">Valider</button>
+	<p class="instructions">Les champs marqués d'une étoile sont obligatoires</p>
+	<fieldset>
+		{% for field in form %}{% include "form_snippet.html"%}{% endfor %}
+	</fieldset>
+	<button type="submit" class="check">Valider</button>
+	<a href="{% url provider_index %}" class="back">Retour</a>
 </form>
 {% endblock %}
