--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -27,7 +27,7 @@
 	</thead>
 	<tbody>
 	{% for line in data %}
-	<tr class="{% cycle 'odd' 'even' %}">
+	<tr class="{% cycle 'odd' 'even' %} {% if line.0 == 'false' %}disabled{% endif %}">
 		{% for item in line %}
 			{% if forloop.counter == 1 %}
 			<td>
@@ -36,7 +36,7 @@
 				{% else %}
 				<input type="checkbox" class="imported_item" value="{{forloop.parentloop.counter0}}" disabled="true" />
 				{% endif %}
-				- {{ forloop.parentloop.counter0 }}
+				- {{ forloop.parentloop.counter }}
 			</td>
 			{% else %}
 			<td class="{% if line.0 == False %}disabled{% endif %}">{{ item }}</td>
