--- a/templates/tab_validation.html
+++ b/templates/tab_validation.html
@@ -4,8 +4,27 @@
 {% block menu_validation %}active{% endblock %}
 
 {% block header %}
+{% if user|has_perm:"team.custom_view_teams" %}
+	{% if not see_all_teams %}
+	<div class="btn_wrapper">
+		<a href="{% url tab_validation %}?see_all_teams=1" class="btn_medium">
+			<img src="{{ MEDIA_URL }}img/icons/arrow_down.png" />Voir autres équipes
+		</a>
+	</div>
+	{% else %}
+		<div class="btn_wrapper">
+			<a href="{% url tab_validation %}?see_all_teams=0" class="btn_medium">
+				<img src="{{ MEDIA_URL }}img/icons/arrow_up.png" />Voir mon équipe
+			</a>
+		</div>
+	{% endif %}
+{% endif %}
 <h1>Gestion des commandes</h1>
-<h2>Commandes à valider</h2>
+<h2>Commandes à valider
+	{% if user|has_perm:"team.custom_view_teams" %}
+		{% if not see_all_teams %}(mon équipe){% else %}(autres équipes){% endif %}
+	{% endif %}
+</h2>
 {% endblock %}
 
 {% block content %}
