--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -32,7 +32,7 @@
 		</thead>
 		<tbody>
 			{% for order in orders.object_list %}
-			<tr class="{% cycle 'even' 'odd' %}">
+			<tr class="{% cycle 'even' 'odd' %} {% if order.has_problem %}has_problem{% endif %}{% if order.is_urgent %}is_urgent{% endif %}">
 				<td>{{ order.date_created|date }}</td>
 				<td>{{ order.last_change|date }}</td>
 				<td>{{ order.provider.name }}</td>
