Fixing attachment url redirection

--- a/templates/order/_order_detail.html
+++ b/templates/order/_order_detail.html
@@ -64,11 +64,11 @@
 		{% include "attachments/show.html" %}
 	{% endwith %}
 	{% if order.status == 0 %}
-		<a href="{% url attachment_new %}?object_id={{order.id}}&content_type={{order|get_content_type}}&next=tab_cart" class="document">
+		<a href="{% url attachment_new %}?object_id={{order.id}}&content_type={{order|get_content_type}}&next={% url tab_cart %}" class="document">
 			Ajouter une pièce jointe
 		</a>
 	{% else %}{% if order.status == 1 %}
-		<a href="{% url attachment_new %}?object_id={{order.id}}&content_type={{order|get_content_type}}&next=tab_validation" class="document">
+		<a href="{% url attachment_new %}?object_id={{order.id}}&content_type={{order|get_content_type}}&next={% url tab_validation %}" class="document">
 			Ajouter une pièce jointe
 		</a>
 	{% else %}{% if order.status > 2 %}
