--- a/templates/attachments/form.html
+++ b/templates/attachments/form.html
@@ -5,7 +5,7 @@
 	<form action="{% url attachment_new %}" method="post" enctype="multipart/form-data">{% csrf_token %}
 		<input type="hidden" name="content_type" value="{{content_type}}" />
 		<input type="hidden" name="object_id" value="{{object_id}}" />
-		<input type="hidden" name="next" value='{{ next|default:"home" }}' />
+		<input type="hidden" name="next" value='{{ next|default:"{% url home %}" }}' />
 		
 		<h3>Ajout d'une pièce jointe</h3>
 		<p class="instructions">
