display history's attachments

--- a/templates/history/item.html
+++ b/templates/history/item.html
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block content %}
+{% with history as object %}
+	{% include "attachments/show.html" %}
+{% endwith %}
+
 <table class="list">
   <thead>
     <th>Utilisateur</th>
