add permission "custom_add_team"

--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -58,6 +58,8 @@
 						{{ form.custom_history_budget }}{{ form.custom_history_budget.label }}
 					</td>
 					<td>
+						{{ form.custom_add_team }}{{ form.custom_add_team.label }}
+						<div class="cleaner"></div>
 						{{ form.custom_view_teams }}{{ form.custom_view_teams.label }}
 						<div class="cleaner"></div>
 						{{ form.custom_edit_member }}{{ form.custom_edit_member.label }}
