--- a/templates/team/index.html
+++ b/templates/team/index.html
@@ -3,10 +3,10 @@
 {% block menu_team %}active{% endblock %}
 
 {% block header %}
-{% if user.is_superuser %}
+{% if user|has_perm:"team.custom_add_team" %}
 <div class="btn_wrapper">
 	<a href="{% url team_new %}" class="btn_medium">
-		<img src="{{ MEDIA_URL }}img/icons/add.png" />Ajouter une équipe
+		<img src="{{ MEDIA_URL }}img/icons/add.png" />Créer une équipe
 	</a>
 </div>
 {% endif %}
