--- a/templates/budgetlines/search_form.html
+++ b/templates/budgetlines/search_form.html
@@ -41,6 +41,8 @@
         <td>N°cmde:</td>
         <td>{{ filter_form.number }}</td>
         <td width="10%"></td>
+				<td>Origine (Code)</td>
+				<td>{{ filter_form.origin }}</td>
       </tr>
     </table>
     <div class="cleaner"></div>
