--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -42,7 +42,7 @@
 		<th>nature</th>
 		<th>tutelle</th>
 		<th>fournisseur</th>
-		<th>offre</th>
+		<th>commentaire</th>
 		<th>désignation</th>
 		<th>ref</th>
 		<th>crédit</th>
