--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -39,12 +39,12 @@
 		<th>budget</th>
 		<th>cmde</th>
 		<th>date</th>
+		<th>dest</th>
 		<th>nature</th>
 		<th>tutelle</th>
 		<th>fournisseur</th>
 		<th>commentaire</th>
 		<th>désignation</th>
-		<th>ref</th>
 		<th>crédit</th>
 		<th>débit</th>
 		<th>qté</th>
@@ -67,6 +67,7 @@
 				{% endif %}
 				<td>{{ budget_line.number|default:"" }}</td>
 				<td>{{ budget_line.date|date }}</td>
+				<td style="color:#e2350d">{{ budget_line.get_order_team }}</td>
 				<td>{{ budget_line.nature|default:"Toutes" }}</td>
 				<td>{{ budget_line.get_budget_type_display|default:"" }}</td>
 				<td>{{ budget_line.provider|default:"" }}</td>
@@ -74,7 +75,6 @@
 				<td title="{{ budget_line.product|default:""}}">
 					{{ budget_line.product|default:""|truncatewords:6 }}
 				</td>
-				<td>{{ budget_line.ref|default:"" }}</td>
 				<td style="color:green">{{ budget_line.credit|default:"" }}</td>
 				<td style="color:red">{{ budget_line.debit|default:"" }}</td>
 				<td>{{ budget_line.quantity|default:1 }}</td>
