--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -65,6 +65,13 @@
 <h2>Liste des produits - Page {{ products.number }} sur {{ products.paginator.num_pages }}.</h2>
 
 {% pagination products %}
+<br />
+<div class="cleaner"></div>
+<div style="color:#e2350d;height:20px">
+	<div class="legend_urgent"></div>offre périmée
+</div>
+<div class="cleaner"></div>
+
 <table class="list">
 	<thead>
 			<th>Fournisseur</th>
