--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -14,6 +14,15 @@
 
 {% block content %}
 {% if orders.object_list %}
+	<div style="color:#e2350d">
+		<div class="legend_urgent"></div>commandes urgentes
+	</div>
+	<div class="cleaner"></div>
+
+	<div style="color:#f9a900">
+		<div class="legend_problem"></div>problème sur la commande</div>
+	</div>
+	<div class="cleaner"></div>
 	<table class="list">
 		<thead>
 			<th>Date</th>
