Added budgetline search form to budget index page

--- a/templates/budget/index.html
+++ b/templates/budget/index.html
@@ -10,6 +10,7 @@
 	</a>
 </div>
 <h1>Gestion des budgets</h1>
+{% include "budgetlines/search_form.html" %}
 <h2>Liste des budgets</h2>
 {% endblock %}
 
