--- a/templates/budgetlines/search_form.html
+++ b/templates/budgetlines/search_form.html
@@ -48,7 +48,7 @@
     <div class="cleaner"></div>
     
     <button type="submit" class="all">Chercher</button>
-    <a href="{% url budgetlines %}" class="refresh">Liste globale</a>
+    <a href="{% url budgets %}" class="refresh">Retour liste des budgets</a>
   </form>
 </div>
 <div class="cleaner"></div>
