adding order reception module

--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -47,6 +47,8 @@
 						{{ form.custom_goto_status_4 }}{{ form.custom_goto_status_4.label }}
 						<div class="cleaner"></div>
 						{{ form.custom_order_any_team }}{{ form.custom_order_any_team.label }}
+						<div class="cleaner"></div>
+						{{ form.custom_view_local_provider }}{{ form.custom_view_local_provider.label }}
 					</td>
 					<td>
 						{{ form.custom_view_budget }}{{ form.custom_view_budget.label }}
