--- a/templates/base_orders.html
+++ b/templates/base_orders.html
@@ -5,14 +5,18 @@
 
 {% block nav_secondary %}
 <ul id="subnav">
+	{% if not user|has_perm:"order.custom_view_local_provider" %}
 	<li class="{% block menu_cart %}{% endblock %}">
 		<a href="{% url tab_cart %}">Panier</a>
 	</li>
+	{% endif %}
 	{% if user|has_perm:"order.custom_validate" %}
 	<li class="{% block menu_validation %}{% endblock %}">
 		<a href="{% url tab_validation %}">Commandes à valider</a>
 	</li>
 	{% endif %}
+	
+	{% if not user|has_perm:"order.custom_view_local_provider" %}
 	<li class="{% block menu_order %}{% endblock %}">
 		<a href="{% url tab_orders %}">
 			{% if user|has_perm:"order.custom_goto_status_4" and not user.is_superuser %}
@@ -21,6 +25,16 @@
 			Commandes en cours
 			{% endif %}
 		</a>
+	</li>
+	{% endif %}
+	
+	<li class="{% block menu_reception %}{% endblock %}">
+		
+		{% if not user|has_perm:"order.custom_view_local_provider" %}
+			<a href="{% url tab_reception %}">Réception</a>
+		{% else %}
+			<a href="{% url tab_reception %}">Livraison</a>
+		{% endif %}
 	</li>
 </ul>
 {% endblock %}
