--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -36,18 +36,26 @@
         <li class="{% block menu_home %}{% endblock %}">
           <a href="{% url info_index %}">Accueil</a>
         </li>
-        <li class="{% block menu_provider %}{% endblock %}">
-          <a href="{% url provider_index %}">Fournisseurs</a>
+				{% if not user|has_perm:"order.custom_view_local_provider" or user.is_superuser %}
+	        <li class="{% block menu_provider %}{% endblock %}">
+	          <a href="{% url provider_index %}">Fournisseurs</a>
+	        </li>
+	        <li class="{% block menu_product %}{% endblock %}">
+	          <a href="{% url product_index %}">Produits</a>
+	        </li>
+	        <li class="{% block menu_services %}{% endblock %}">
+	          <a href="{% url tab_services %}">Services</a>
+	        </li>
+				{% endif %}
+        
+				<li class="{% block tab_orders %}{% endblock %}">
+					{% if user|has_perm:"order.custom_view_local_provider" %}
+	          <a href="{% url tab_reception %}">Commandes</a>
+					{% else %}
+	          <a href="{% url tab_orders %}">Commandes</a>
+					{% endif %}	
         </li>
-        <li class="{% block menu_product %}{% endblock %}">
-          <a href="{% url product_index %}">Produits</a>
-        </li>
-        <li class="{% block menu_services %}{% endblock %}">
-          <a href="{% url tab_services %}">Services</a>
-        </li>
-        <li class="{% block tab_orders %}{% endblock %}">
-          <a href="{% url tab_orders %}">Commandes</a>
-        </li>
+
         {% if user|has_perm:"budget.custom_view_budget" %}
           <li class="{% block tab_budgets %}{% endblock %}">
             <a href="{% url budgets %}">Budgets</a>
